Passengers-service update